# ERPNext-Frepple-Integration

./: pyproject.toml
frepple/: hooks.py  migrate.py  uninstall.py
frepple/frepple/custom_fields/: bom.json  frepple_operation.json  operation.json  party_specific_item.json
frepple/frepple/doctype/frepple_business_rule/: frepple_business_rule.js  frepple_business_rule.json  frepple_business_rule.py  test_frepple_business_rule.py
frepple/frepple/doctype/frepple_customer/: frepple_customer.json
frepple/frepple/doctype/frepple_data_export/: frepple_data_export.py
frepple/frepple/doctype/frepple_data_import/: frepple_data_import.js  frepple_data_import.json  frepple_data_import.py  test_frepple_data_import.py
frepple/frepple/doctype/frepple_distribution_order/: frepple_distribution_order.js  frepple_distribution_order.json  frepple_distribution_order.py  test_frepple_distribution_order.py
frepple/frepple/doctype/frepple_forecast/: frepple_forecast.js  frepple_forecast.json  frepple_forecast.py  test_frepple_forecast.py
frepple/frepple/doctype/frepple_integration_data_fetching/: frepple_integration_data_fetching.json  frepple_integration_data_fetching.py
frepple/frepple/doctype/frepple_inventory_detail/: frepple_inventory_detail.js  frepple_inventory_detail.json  frepple_inventory_detail.py  test_frepple_inventory_detail.py
frepple/frepple/doctype/frepple_inventory_policies/: frepple_inventory_policies.js  frepple_inventory_policies.json  frepple_inventory_policies.py  test_frepple_inventory_policies.py
frepple/public/js/: sales_order.js
(+35 files in other folders)
