[project]
name = "frepple"
authors = [
    {name = "msf4-0"}
]
description = "Frepple ERPNext Integration"
requires-python = ">=3.10"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
